# ai-coding-book

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WHERE_AM_I.md  context.md  feedback.md  how-to-start-a-new-book.md  lees-process.md  product-definition.md  project-plan.md  result-review.md  sprint-plan.md  sprint-review.md
.claude/worktrees/confident-burnell/: .gitignore  README.md  context.md  project-plan.md  pyproject.toml  result-review.md
.claude/worktrees/confident-burnell/agents/: confused-beginner.md  continuity-editor.md  evidence-mapper.md  scenario-designer.md  script-writer.md  source-interpreter.md
.claude/worktrees/confident-burnell/book-2/: context.md  product-definition.md  sprint-plan.md
.claude/worktrees/confident-burnell/book-2/chapters/: conclusion.md
.claude/worktrees/confident-burnell/book-2/chapters/part-1/: ch-03-the-reader-problem.md  ch-04-voice-and-sequence.md  ch-05-run-the-pipeline.md
.claude/worktrees/confident-burnell/chapters/part-1/: ch-01-plan-before-you-prompt.md  ch-03-test-ai-output.md  ch-05-iterate-deliberately.md  ch-06-manage-scope.md
.claude/worktrees/confident-burnell/chapters/part-2/: ch-11-multi-agent-coordination.md  ch-13-autonomy-at-scale.md
.claude/worktrees/confident-burnell/skills/: backlog.md
.claude/worktrees/confident-burnell/skills/tutorial-writer/: evidence-mapping.md  frame-selection.md  grounding.md  public-artifact-hygiene.md  tutorial-narrative.md  tutorial-quality-review.md  tutorial-writing.md
.claude/worktrees/confident-burnell/src/ai-coding-book/: __init__.py  main.py
backlog/: schema.md  (+1 more)
(+429 files in other folders)
